--- a/Main_Menu___Overlay.html
+++ b/Main_Menu___Overlay.html
@@ -21,7 +21,7 @@
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 313;
+		width: 313px;
 		height: 724;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
