--- a/Main_Menu___Overlay.html
+++ b/Main_Menu___Overlay.html
@@ -22,7 +22,7 @@
 		box-sizing: border-box;
 		background: #E5E5E5;
 		width: 313px;
-		height: 724;
+		height: 724px;
 		background-color: rgba(0,0,0,1);
 		overflow: hidden;
 		margin: 0;
