--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Traitor_Guardsman_A47_Text_1353 {
+	#Traitor_Guardsman_A47_Text_2 {
 		position: absolute;
 		left: 98px;
 		top: 29px;
@@ -99,7 +99,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Rogue_Psyker_A47_Text_1354 {
+	#Rogue_Psyker_A47_Text_3 {
 		position: absolute;
 		left: 96px;
 		top: 29px;
@@ -129,7 +129,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Negavolt_Cultist_A47_Text_1355 {
+	#Negavolt_Cultist_A47_Text_4 {
 		position: absolute;
 		left: 98px;
 		top: 27px;
@@ -159,7 +159,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Chaos_Space_Marine_A47_Text_1356 {
+	#Chaos_Space_Marine_A47_Text_5 {
 		position: absolute;
 		left: 96px;
 		top: 19px;
@@ -189,7 +189,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Ur_Ghul_A47_Text_1357 {
+	#Ur_Ghul_A47_Text_6 {
 		position: absolute;
 		left: 98px;
 		top: 34px;
@@ -219,7 +219,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Chaos_Beastman_A47_Text_1358 {
+	#Chaos_Beastman_A47_Text_7 {
 		position: absolute;
 		left: 96px;
 		top: 29px;
@@ -249,7 +249,7 @@
 		left: 0px;
 		top: 0px;
 	}
-	#Spindle_Drone_A47_Text_1359 {
+	#Spindle_Drone_A47_Text_8 {
 		position: absolute;
 		left: 98px;
 		top: 26px;
@@ -386,13 +386,13 @@
 	<a href="New_TG_Home.html">
 	<div id="Group_733">
 		<svg class="Traitor_Guardsman">
-			<pattern elementId="Traitor_Guardsman_A47_Rectangle_1213" id="Traitor_Guardsman_A47_Rectangle_1213_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Traitor_Guardsman_A47_Rectangle_1213_pattern.png" xlink:href="Traitor_Guardsman_A47_Rectangle_1213_pattern.png"></image>
+			<pattern elementId="Traitor_Guardsman_A47_Rectangle_3" id="Traitor_Guardsman_A47_Rectangle_3_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Traitor_Guardsman_A47_Rectangle_3_pattern.png" xlink:href="Traitor_Guardsman_A47_Rectangle_3_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Traitor_Guardsman_A47_Rectangle_1213_pattern)" id="Traitor_Guardsman" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Traitor_Guardsman_A47_Rectangle_3_pattern)" id="Traitor_Guardsman" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Traitor_Guardsman_A47_Text_1353">
+		<div id="Traitor_Guardsman_A47_Text_2">
 			<span>Traitor Guardsman</span>
 		</div>
 	</div>
@@ -400,13 +400,13 @@
 	<a href="New_RP_Home.html">
 	<div id="Group_734">
 		<svg class="Rogue_Psyker">
-			<pattern elementId="Rogue_Psyker_A47_Rectangle_1215" id="Rogue_Psyker_A47_Rectangle_1215_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Rogue_Psyker_A47_Rectangle_1215_pattern.png" xlink:href="Rogue_Psyker_A47_Rectangle_1215_pattern.png"></image>
+			<pattern elementId="Rogue_Psyker_A47_Rectangle_5" id="Rogue_Psyker_A47_Rectangle_5_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Rogue_Psyker_A47_Rectangle_5_pattern.png" xlink:href="Rogue_Psyker_A47_Rectangle_5_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Rogue_Psyker_A47_Rectangle_1215_pattern)" id="Rogue_Psyker" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Rogue_Psyker_A47_Rectangle_5_pattern)" id="Rogue_Psyker" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Rogue_Psyker_A47_Text_1354">
+		<div id="Rogue_Psyker_A47_Text_3">
 			<span>Rogue Psyker</span>
 		</div>
 	</div>
@@ -414,13 +414,13 @@
 	<a href="New_NC_Home.html">
 	<div id="Group_732">
 		<svg class="Negavolt_Cultist">
-			<pattern elementId="Negavolt_Cultist_A47_Rectangle_1217" id="Negavolt_Cultist_A47_Rectangle_1217_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Negavolt_Cultist_A47_Rectangle_1217_pattern.png" xlink:href="Negavolt_Cultist_A47_Rectangle_1217_pattern.png"></image>
+			<pattern elementId="Negavolt_Cultist_A47_Rectangle_7" id="Negavolt_Cultist_A47_Rectangle_7_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Negavolt_Cultist_A47_Rectangle_7_pattern.png" xlink:href="Negavolt_Cultist_A47_Rectangle_7_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Negavolt_Cultist_A47_Rectangle_1217_pattern)" id="Negavolt_Cultist" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Negavolt_Cultist_A47_Rectangle_7_pattern)" id="Negavolt_Cultist" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Negavolt_Cultist_A47_Text_1355">
+		<div id="Negavolt_Cultist_A47_Text_4">
 			<span>Negavolt Cultist</span>
 		</div>
 	</div>
@@ -428,13 +428,13 @@
 	<a href="New_CSM_Home.html">
 	<div id="Group_731">
 		<svg class="Chaos_Space_Marine">
-			<pattern elementId="Chaos_Space_Marine_A47_Rectangle_1219" id="Chaos_Space_Marine_A47_Rectangle_1219_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Chaos_Space_Marine_A47_Rectangle_1219_pattern.png" xlink:href="Chaos_Space_Marine_A47_Rectangle_1219_pattern.png"></image>
+			<pattern elementId="Chaos_Space_Marine_A47_Rectangle_9" id="Chaos_Space_Marine_A47_Rectangle_9_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Chaos_Space_Marine_A47_Rectangle_9_pattern.png" xlink:href="Chaos_Space_Marine_A47_Rectangle_9_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Chaos_Space_Marine_A47_Rectangle_1219_pattern)" id="Chaos_Space_Marine" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Chaos_Space_Marine_A47_Rectangle_9_pattern)" id="Chaos_Space_Marine" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Chaos_Space_Marine_A47_Text_1356">
+		<div id="Chaos_Space_Marine_A47_Text_5">
 			<span>Chaos Space Marine</span>
 		</div>
 	</div>
@@ -442,13 +442,13 @@
 	<a href="New_UG_Home.html">
 	<div id="Group_729">
 		<svg class="Ur_Ghul">
-			<pattern elementId="Ur_Ghul_A47_Rectangle_1221" id="Ur_Ghul_A47_Rectangle_1221_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Ur_Ghul_A47_Rectangle_1221_pattern.png" xlink:href="Ur_Ghul_A47_Rectangle_1221_pattern.png"></image>
+			<pattern elementId="Ur_Ghul_A47_Rectangle_11" id="Ur_Ghul_A47_Rectangle_11_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Ur_Ghul_A47_Rectangle_11_pattern.png" xlink:href="Ur_Ghul_A47_Rectangle_11_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Ur_Ghul_A47_Rectangle_1221_pattern)" id="Ur_Ghul" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Ur_Ghul_A47_Rectangle_11_pattern)" id="Ur_Ghul" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Ur_Ghul_A47_Text_1357">
+		<div id="Ur_Ghul_A47_Text_6">
 			<span>Ur-Ghul</span>
 		</div>
 	</div>
@@ -456,13 +456,13 @@
 	<a href="New_CB_Home.html">
 	<div id="Group_730">
 		<svg class="Chaos_Beastman">
-			<pattern elementId="Chaos_Beastman_A47_Rectangle_1223" id="Chaos_Beastman_A47_Rectangle_1223_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Chaos_Beastman_A47_Rectangle_1223_pattern.png" xlink:href="Chaos_Beastman_A47_Rectangle_1223_pattern.png"></image>
+			<pattern elementId="Chaos_Beastman_A47_Rectangle_13" id="Chaos_Beastman_A47_Rectangle_13_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Chaos_Beastman_A47_Rectangle_13_pattern.png" xlink:href="Chaos_Beastman_A47_Rectangle_13_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Chaos_Beastman_A47_Rectangle_1223_pattern)" id="Chaos_Beastman" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Chaos_Beastman_A47_Rectangle_13_pattern)" id="Chaos_Beastman" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Chaos_Beastman_A47_Text_1358">
+		<div id="Chaos_Beastman_A47_Text_7">
 			<span>Chaos Beastman</span>
 		</div>
 	</div>
@@ -470,13 +470,13 @@
 	<a href="New_SD_Home.html">
 	<div id="Group_728">
 		<svg class="Spindle_Drone">
-			<pattern elementId="Spindle_Drone_A47_Rectangle_1225" id="Spindle_Drone_A47_Rectangle_1225_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Spindle_Drone_A47_Rectangle_1225_pattern.png" xlink:href="Spindle_Drone_A47_Rectangle_1225_pattern.png"></image>
+			<pattern elementId="Spindle_Drone_A47_Rectangle_15" id="Spindle_Drone_A47_Rectangle_15_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Spindle_Drone_A47_Rectangle_15_pattern.png" xlink:href="Spindle_Drone_A47_Rectangle_15_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Spindle_Drone_A47_Rectangle_1225_pattern)" id="Spindle_Drone" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Spindle_Drone_A47_Rectangle_15_pattern)" id="Spindle_Drone" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
-		<div id="Spindle_Drone_A47_Text_1359">
+		<div id="Spindle_Drone_A47_Text_8">
 			<span>Spindle Drone</span>
 		</div>
 	</div>
@@ -484,10 +484,10 @@
 	<a href="New_OM_Home.html">
 	<div id="Group_727">
 		<svg class="Obsidius_Mallex">
-			<pattern elementId="Obsidius_Mallex_A47_Rectangle_1227" id="Obsidius_Mallex_A47_Rectangle_1227_pattern" x="0" y="0" width="100%" height="100%">
-				<image x="0" y="0" width="100%" height="100%" href="Obsidius_Mallex_A47_Rectangle_1227_pattern.png" xlink:href="Obsidius_Mallex_A47_Rectangle_1227_pattern.png"></image>
+			<pattern elementId="Obsidius_Mallex_A47_Rectangle_17" id="Obsidius_Mallex_A47_Rectangle_17_pattern" x="0" y="0" width="100%" height="100%">
+				<image x="0" y="0" width="100%" height="100%" href="Obsidius_Mallex_A47_Rectangle_17_pattern.png" xlink:href="Obsidius_Mallex_A47_Rectangle_17_pattern.png"></image>
 			</pattern>
-			<rect fill="url(#Obsidius_Mallex_A47_Rectangle_1227_pattern)" id="Obsidius_Mallex" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
+			<rect fill="url(#Obsidius_Mallex_A47_Rectangle_17_pattern)" id="Obsidius_Mallex" rx="0" ry="0" x="0" y="0" width="100" height="84.545">
 			</rect>
 		</svg>
 		<div id="Obsidius_Mallex_Chaos_Lord">
