--- a/NC___Recharge.html
+++ b/NC___Recharge.html
@@ -17,66 +17,17 @@
 		margin: 0;
 		padding: 0;
 	}
-	#NC___Recharge {
+	#null {
 		position: absolute;
-		box-sizing: border-box;
-		background: #E5E5E5;
 		width: 343px;
 		height: 250px;
-		background-color: rgba(255,255,255,1);
+		left: 3147px;
+		top: 8303px;
 		overflow: hidden;
-		margin: 0;
-		padding: 0;
-		--web-view-name: NC - Recharge;
-		--web-view-id: NC___Recharge;
-		--web-enable-deep-linking: true;
-	}
-	#Group_709 {
-		position: absolute;
-		width: 343px;
-		height: 250px;
-		left: 0px;
-		top: 0px;
-		overflow: visible;
-	}
-	#Rectangle_47 {
-		filter: blur(15px);
-	}
-	.Rectangle_47 {
-		position: absolute;
-		overflow: visible;
-		width: 343px;
-		height: 250px;
-		left: 0px;
-		top: 0px;
-	}
-	#_UNIQUE__RECHARGE__Remove_a_wo {
-		position: absolute;
-		left: 6px;
-		top: 1px;
-		overflow: hidden;
-		width: 333px;
-		height: 249px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 13px;
-		color: rgba(0,0,0,1);
 	}
 </style>
 </head>
 <body>
-<div id="NC___Recharge">
-	<div id="Group_709">
-		<svg class="Rectangle_47">
-			<rect fill="rgba(255,255,255,1)" stroke="rgba(0,0,0,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_47" rx="0" ry="0" x="0" y="0" width="343" height="250">
-			</rect>
-		</svg>
-		<div id="_UNIQUE__RECHARGE__Remove_a_wo">
-			<span></span><br><span style="font-size:16px;">UNIQUE: RECHARGE</span><br><span></span><br><span style="font-style:normal;font-weight:normal;font-size:14px;">Remove a wound counter from the Negavolt Cultist. If the Negavolt Cultist does not have a wound counter, treat this result as an Advance result instead.</span><br><span style="font-size:14px;"><br/>Advance: </span><span style="font-style:normal;font-weight:normal;font-size:14px;">Move towards the closest explorer. Then attack the closest explorer that is in range of and visible to this hostile.</span>
-		</div>
-	</div>
-</div>
+<img id="null" src="null.png" srcset="null.png 1x, null@2x.png 2x">
 </body>
 </html>
