--- a/index.html
+++ b/index.html
@@ -411,20 +411,21 @@
   .sidenav a {font-size: 18px;}
 }
 </style>
-<div id:"mySidenav" class="sidenav">
-	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	<a href="New_TG_Home.html">Traitor Guardsmen</a>
-	<a href="New_NC_Home.html">Negavolt Cultist</a>
-	<a href="New_UG_Home.html">Ur-Ghul</a>
-	<a href="New_SD_Home.html">Spindle Drone</a>
-	<a href="New_RP_Home.html">Rogue Psyker</a>
-	<a href="New_CSM_Home.html">Chaos Space Marine</a>
-	<a href="New_CB_Home.html">Chaos Beastman</a>
-	<a href="New_OM_Home.html">Obsidius Mallex</a>
-	<a href="Other_Reference.html">Other Reference</a>
-	<a href="index.html">Home</a>
-	</div>
-
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="New_TG_Home.html">Traitor Guardsmen</a>
+		<a href="New_NC_Home.html">Negavolt Cultist</a>
+		<a href="New_UG_Home.html">Ur-Ghul</a>
+		<a href="New_SD_Home.html">Spindle Drone</a>
+		<a href="New_RP_Home.html">Rogue Psyker</a>
+		<a href="New_CSM_Home.html">Chaos Space Marine</a>
+		<a href="New_CB_Home.html">Chaos Beastman</a>
+		<a href="New_OM_Home.html">Obsidius Mallex</a>
+		<a href="Other_Reference.html">Other Reference</a>
+		<a href="index.html">Home</a></div>
+	
+	
+	
 <script>
 	function openNav() {
 		document.getElementbyID("mySidenav").style.width = "250px";
@@ -566,8 +567,8 @@
 		</div>
 	</div>
 	</a>
-		<div id="Group_797" onclick="OpenNav()">
-		<div id="Group_676">
+		<div id="Group_797">
+		<div id="Group_676" onclick="OpenNav()">
 			<svg class="Rectangle_4">
 				<rect fill="rgba(255,255,255,1)" id="Rectangle_4" rx="0" ry="0" x="0" y="0" width="25" height="2.5">
 				</rect>
@@ -586,7 +587,17 @@
 			</rect>
 		</svg>
 	</div>
+<script>
+	function openNav() {
+		document.getElementbyID("mySidenav").style.width = "250px";
+	}
+	function closeNav() {
+		document.getElementbyID("mySidenav").style.width = "0";
+	}
+	</script>
 
+	
+	
 </div>
 </body>
 </html>
