--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>BSF Hostile Home</title>
+<title>index</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: index;
@@ -332,109 +332,8 @@
 		top: 25px;
 		overflow: visible;
 	}
-	#Group_676 {
-		position: absolute;
-		width: 25px;
-		height: 20px;
-		left: 16px;
-		top: 31px;
-		overflow: visible;
-	}
-	.Rectangle_4 {
-		position: absolute;
-		overflow: visible;
-		width: 25px;
-		height: 2.5px;
-		left: 0px;
-		top: 0px;
-	}
-	.Rectangle_5 {
-		position: absolute;
-		overflow: visible;
-		width: 25px;
-		height: 2.5px;
-		left: 0px;
-		top: 8.75px;
-	}
-	.Rectangle_6 {
-		position: absolute;
-		overflow: visible;
-		width: 25px;
-		height: 2.5px;
-		left: 0px;
-		top: 17.5px;
-	}
-	.Rectangle_669 {
-		position: absolute;
-		overflow: visible;
-		width: 48px;
-		height: 63px;
-		left: 0px;
-		top: 0px;
-	}
 </style>
 </head>
-<!---NAVIGATIONOVERLAY***/-->
-<style>
-	.sidenav{
-		height:100%;
-		width:0;
-		position:fixed;
-		z-index:1;
-		top:0;
-		left:0;
-		background-color:#111;
-		overflow-x:hidden;
-		transition:0.5s;
-		paddingtop:60px;	
-	}
-	.sidenav a {
-		padding:8px 8px 8px 8px;
-		text-decoration:none;
-		font-size:25px;
-		color:#818181;
-		display:block;
-		transition:0.3s
-	}
-	.sidenav a:hover{color:#f1f1f1;
-	}
-	.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-</style>
-	<div id="mySidenav" class="sidenav">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		<a href="New_TG_Home.html">Traitor Guardsmen</a>
-		<a href="New_NC_Home.html">Negavolt Cultist</a>
-		<a href="New_UG_Home.html">Ur-Ghul</a>
-		<a href="New_SD_Home.html">Spindle Drone</a>
-		<a href="New_RP_Home.html">Rogue Psyker</a>
-		<a href="New_CSM_Home.html">Chaos Space Marine</a>
-		<a href="New_CB_Home.html">Chaos Beastman</a>
-		<a href="New_OM_Home.html">Obsidius Mallex</a>
-		<a href="Other_Reference.html">Other Reference</a>
-		<a href="index.html">Home</a></div>
-	
-	
-	
-<script>
-	function openNav() {
-		document.getElementbyID("mySidenav").style.width = "250px";
-	}
-	function closeNav() {
-		document.getElementbyID("mySidenav").style.width = "0";
-	}
-	</script>
-	
 <body>
 <div id="index">
 	<svg class="Rectangle_11">
@@ -567,37 +466,9 @@
 		</div>
 	</div>
 	</a>
-		<div id="Group_797">
-		<div id="Group_676" onclick="OpenNav()">
-			<svg class="Rectangle_4">
-				<rect fill="rgba(255,255,255,1)" id="Rectangle_4" rx="0" ry="0" x="0" y="0" width="25" height="2.5">
-				</rect>
-			</svg>
-			<svg class="Rectangle_5">
-				<rect fill="rgba(255,255,255,1)" id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="25" height="2.5">
-				</rect>
-			</svg>
-			<svg class="Rectangle_6">
-				<rect fill="rgba(255,255,255,1)" id="Rectangle_6" rx="0" ry="0" x="0" y="0" width="25" height="2.5">
-				</rect>
-			</svg>
-		</div>
-		<svg class="Rectangle_669">
-			<rect fill="transparent" id="Rectangle_669" rx="0" ry="0" x="0" y="0" width="48" height="63">
-			</rect>
-		</svg>
-	</div>
-<script>
-	function openNav() {
-		document.getElementbyID("mySidenav").style.width = "250px";
-	}
-	function closeNav() {
-		document.getElementbyID("mySidenav").style.width = "0";
-	}
-	</script>
-
-	
-	
+	<a href="Main_Menu___Overlay.html" target="_self">
+	<img id="Group_797" src="Group_797.png" srcset="Group_797.png 1x, Group_797@2x.png 2x">
+	</a>
 </div>
 </body>
 </html>
