--- a/navigation.html
+++ b/navigation.html
@@ -86,10 +86,7 @@
 		<a href="Other_Reference.html" class="ORNav">Other Reference</a>
 		<a href="index.html" class="HomeNav">Home</a>
 	</div>
-	<span style-"font-size:30px;cursor:pointer" onclick="openNav()">Open</span>
-	<a href="javascript:void(0)" alt="" onclick="openNav()">
-		<img id="Group_797" src="Group_797.png" alt="">
-	</a>
+	<span style="font-size:30px;cursor:pointer" onclick="openNav()">open</span>
 	
 	<script>
 		function openNav() {
