--- a/navigation.html
+++ b/navigation.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Navigation</title>
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+body {
+  font-family: "Lato", sans-serif;
+}
+
 	.sidenav{
 		height:100%;
 		width:0;
@@ -15,20 +17,22 @@
 		background-color:#111;
 		overflow-x:hidden;
 		transition:0.5s;
-		paddingtop:60px;	
-	}
+		paddingtop:60px;
+    }
 	.sidenav a {
 		padding:8px 8px 8px 8px;
 		text-decoration:none;
 		font-size:20px;
 		color:#000000;
 		display:block;
-		padding:5px;
+		padding:10px;
 		transition:0.3s;
-		border-radius:0 5px 5px 0;
+		border-radius:0 10px 10px 0;
+        width:85%;
 	}
 	.sidenav a:hover{
 		color:#2A2222;
+        width:90%;
 	}
 	.TGNav{
 		background-color: rgba(255,255,255,1);
@@ -63,9 +67,9 @@
 	.sidenav .closebtn {
   		position: absolute;
   		top: 0;
-  		right: 15px;
+  		right: -170px;
   		font-size: 36px;
-  		margin-left: 50px;
+  		margin-left: 20px;
 }
 
 @media screen and (max-height: 450px) {
@@ -73,37 +77,35 @@
   .sidenav a {font-size: 18px;}
 }
 </style>
-	<div id="mySidenav" class="sidenav">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		<a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
-		<a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
-		<a href="New_UG_Home.html" class="UGNav">Ur-Ghul</a>
-		<a href="New_SD_Home.html" class="SDNav">Spindle Drone</a>
-		<a href="New_RP_Home.html" class="RPNav">Rogue Psyker</a>
-		<a href="New_CSM_Home.html" class="CSMNav">Chaos Space Marine</a>
-		<a href="New_CB_Home.html" class="CBNav">Chaos Beastman</a>
-		<a href="New_OM_Home.html" class="OMNav">Obsidius Mallex</a>
-		<a href="Other_Reference.html" class="ORNav">Other Reference</a>
-		<a href="index.html" class="HomeNav">Home</a>
-	</div>
-	<span style="font-size:30px;cursor:pointer" onclick="openNav()">open</span>
-	
-	<script>
-		function openNav() {
-			document.getElementbyID("mySidenav").style.width = "30%";
-		}
-		function closeNav() {
-			document.getElementbyID("mySidenav").style.width = "0";
-		}
-		document.addEventListener('mousedown',function(event){
-        	var side_dom    = document.getElementById("mySidenav")
-        	if(side_dom.style.width == '30%'){
-                if(!side_dom.contains(event.target)){
-                        document.getElementById("mySidenav").style.width = "0";
-                }
-        	}       
-		})
-	</script>
+</head>
 <body>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
+  <a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
+  <a href="New_UG_Home.html" class="UGNav">Ur-Ghul</a>
+  <a href="New_SD_Home.html" class="SDNav">Spindle Drone</a>
+  <a href="New_RP_Home.html" class="RPNav">Rogue Psyker</a>
+  <a href="New_CSM_Home.html" class="CSMNav">Chaos Space Marine</a>
+  <a href="New_CB_Home.html" class="CBNav">Chaos Beastman</a>
+  <a href="New_OM_Home.html" class="OMNav">Obsidius Mallex</a>
+  <a href="Other_Reference.html" class="ORNav">Other Reference</a>
+  <a href="index.html" class="HomeNav">Home</a>
+</div>
+	
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">open</span>
+	
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+
+
+</script>
 </body>
 </html>
