--- a/navigation.html
+++ b/navigation.html
@@ -79,7 +79,6 @@ body {
 <body>
 
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
   <a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
   <a href="New_UG_Home.html" class="UGNav">Ur-Ghul</a>
@@ -92,8 +91,10 @@ body {
   <a href="index.html" class="HomeNav">Home</a>
 </div>
 	
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">open</span>
-	
+<a href="javascript:void(0)" onclick="openNav()">
+	<img id="Group_797" src="Group_797.png" srcset="Group_797.png 1x, Group_797@2x.png 2x">
+</a>
+
 <script>
 function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
