--- a/index.html
+++ b/index.html
@@ -335,6 +335,9 @@
 </style>
 </head>
 <body>
+<div id="navigation">
+	<?php include 'menu.php':?>
+</div>
 <div id="index">
 	<svg class="Rectangle_11">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="375" height="88">
@@ -466,19 +469,5 @@
 		</div>
 	</div>
 	</a>
-	<a href="javscript:void(0) onclick="openNav()"">
-	<img id="Group_797" src="Group_797.png" srcset="Group_797.png 1x, Group_797@2x.png 2x">
-	</a>
-</div>
-
-<script>
-	function openNav() {
-		document.getElementbyID("mySidenav").style.width = "250px";
-	}
-	function closeNav() {
-		document.getElementbyID("mySidenav").style.width = "0";
-	}
-	</script>
-
 </body>
 </html>
