--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 </head>
 <body>
 <div id="navigation">
-	<?php include 'menu.php':?>
+	<?php include 'menu.php';?>
 </div>
 <div id="index">
 	<svg class="Rectangle_11">
