--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
 </style>
 </head>
 <body>
-<div id="navigation">
-	<?php include 'menu.php';?>
+<div class="menu">
+<?php include 'menu.php';?>
 </div>
 <div id="index">
 	<svg class="Rectangle_11">
