--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<?php $thisPage="index";?>
 <html>
 <head>
 <meta charset="utf-8"/>
@@ -337,7 +336,7 @@
 </head>
 <body>
 <div class="menu">
-<?php include 'menu.php';?>
+<?php echo 'menu.php';?>
 </div>
 <div id="index">
 	<svg class="Rectangle_11">
