--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 375px;
-		height: 812px;
+		width: 100%;
+		height: 100%;
 		background-color: rgba(244,239,214,1);
 		overflow: visible;
 		margin: 0;
