--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	.Rectangle_11 {
 		position: absolute;
 		overflow: visible;
-		width: 375px;
+		width: 100%;
 		height: 88px;
 		left: 0px;
 		top: 0px;
@@ -336,7 +336,7 @@
 </head>
 <body>
 <div class="menu">
-<?php echo 'menu.php';?>
+<?php include('menu.php');?>
 </div>
 <div id="index">
 	<svg class="Rectangle_11">
