--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 </head>
 <body>
 <div class="menu">
-<?php include('menu.php');?>
+<div w3-include-html="navigation.html></div>
 </div>
 <div id="index">
 	<svg class="Rectangle_11">
