--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 </style>
 </head>
 <body>
-<div w3-include-html="navigation.html"></div>
+document.appendChild("navigation.html")
 <div id="index">
 	<svg class="Rectangle_11">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="375" height="88">
