--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 100%;
-		height: 100%;
+		width: 375px;
+		height: 812px;
 		background-color: rgba(244,239,214,1);
 		overflow: visible;
 		margin: 0;
@@ -34,7 +34,7 @@
 	.Rectangle_11 {
 		position: absolute;
 		overflow: visible;
-		width: 100%;
+		width: 375px;
 		height: 88px;
 		left: 0px;
 		top: 0px;
@@ -466,5 +466,7 @@
 		</div>
 	</div>
 	</a>
+	<img id="Group_797" src="Group_797.png" srcset="Group_797.png 1x, Group_797@2x.png 2x">
+</div>
 </body>
 </html>
