--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
 		top: 25px;
 		overflow: visible;
 	}
+<link rel="stylesheet" type="text/css" href="headerstyle.css">
 </style>
 </head>
 <body>
@@ -466,7 +467,24 @@
 		</div>
 	</div>
 	</a>
+
+	<div id="mySidenav" class="sidenav">
+	  <a href="New_TG_Home.html" class="TGNav">Traitor Guardsmen</a>
+	  <a href="New_NC_Home.html" class="NCNav">Negavolt Cultist</a>
+	  <a href="New_UG_Home.html" class="UGNav">Ur-Ghul</a>
+	  <a href="New_SD_Home.html" class="SDNav">Spindle Drone</a>
+	  <a href="New_RP_Home.html" class="RPNav">Rogue Psyker</a>
+	  <a href="New_CSM_Home.html" class="CSMNav">Chaos Space Marine</a>
+	  <a href="New_CB_Home.html" class="CBNav">Chaos Beastman</a>
+	  <a href="New_OM_Home.html" class="OMNav">Obsidius Mallex</a>
+	  <a href="Other_Reference.html" class="ORNav">Other Reference</a>
+	  <a href="index.html" class="HomeNav">Home</a>
+	</div>
+	
+	<a href="javascript:void(0)" onclick="openNav()">
 	<img id="Group_797" src="Group_797.png" srcset="Group_797.png 1x, Group_797@2x.png 2x">
+	</a>
+<script src="headerscript.js"></script>
 </div>
 </body>
 </html>
